// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VenuePhotos (general) should call useCarousel on update 1`] = `
Array [
  Array [
    Object {
      "actions": Object {
        "setItem": [MockFunction],
        "setPause": [MockFunction],
        "setStart": [MockFunction],
      },
      "data": Object {
        "item": "https://www.example.com/photo.jpg",
        "list": Array [],
        "pause": false,
        "start": false,
      },
      "local": Object {
        "getShown": [MockFunction],
      },
    },
  ],
  Array [
    Object {
      "actions": Object {
        "setItem": [MockFunction],
        "setPause": [MockFunction],
        "setStart": [MockFunction],
      },
      "data": Object {
        "item": "https://www.example.com/photo.jpg",
        "list": Array [],
        "pause": false,
        "start": false,
      },
      "local": Object {
        "getShown": [MockFunction],
      },
    },
  ],
]
`;

exports[`VenuePhotos (general) should match snapshot (default) 1`] = `
<div
  className="c-venue-photos js-ref-carousel qa-ref-carousel"
  onMouseEnter={[MockFunction]}
  onMouseLeave={[MockFunction]}
  onTouchEnd={[MockFunction]}
  onTouchStart={[MockFunction]}
>
  <VenueLogo />
  <VenueImage
    local={
      Object {
        "handleError": [MockFunction],
        "handleLoad": [MockFunction],
        "src": "https://www.example.com/photo.jpg",
        "venue": Object {
          "coordinates": Object {
            "latitude": 0,
            "longitude": 0,
          },
          "display_phone": "",
          "distance": 0,
          "favorites": Array [],
          "hours": Array [],
          "id": "",
          "image_url": "",
          "location": Object {
            "display_address": Array [],
          },
          "name": "",
          "photos": Array [],
          "rating": 0,
          "rsvps": Array [],
          "url": "",
        },
      }
    }
  />
</div>
`;

exports[`VenuePhotos (general) should match snapshot (turn) 1`] = `
<div
  className="c-venue-photos js-ref-carousel qa-ref-carousel"
  onMouseEnter={[MockFunction]}
  onMouseLeave={[MockFunction]}
  onTouchEnd={[MockFunction]}
  onTouchStart={[MockFunction]}
>
  <VenueSwipe
    local={
      Object {
        "handleClick": [MockFunction],
        "type": "left",
      }
    }
  />
  <VenueSwipe
    local={
      Object {
        "handleClick": [MockFunction],
        "type": "right",
      }
    }
  />
  <VenueLogo />
  <VenueImage
    local={
      Object {
        "handleError": [MockFunction],
        "handleLoad": [MockFunction],
        "src": "https://www.example.com/photo.jpg",
        "venue": Object {
          "coordinates": Object {
            "latitude": 0,
            "longitude": 0,
          },
          "display_phone": "",
          "distance": 0,
          "favorites": Array [],
          "hours": Array [],
          "id": "",
          "image_url": "",
          "location": Object {
            "display_address": Array [],
          },
          "name": "",
          "photos": Array [
            "",
            "",
          ],
          "rating": 0,
          "rsvps": Array [],
          "url": "",
        },
      }
    }
  />
</div>
`;
